--- a/DockerFile
+++ b/DockerFile
@@ -9,7 +9,7 @@ COPY . /app
 
 # Install any needed dependencies specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
-
+RUN pip install python-multipart
 # Make port 8000 available to the world outside this container
 EXPOSE 8000
 
